<resources>
    <string name="app_name">AndWallet</string>
    <string name="salary">Salary</string>
    <string name="amount">Amount</string>
    <string name="income">INCOME</string>
    <string name="save">SAVE</string>
    <string name="balance">Balance : $</string>
    <string name="_0">0</string>
    <string name="andwallet">AndWallet</string>
    <string name="this_view_shows_your_current_balance">This view shows your current balance:</string>
    <string name="summary_income">Income: $</string>
    <string name="summary_expense">Expense: $</string>
    <string name="summary_total">Total: $</string>
    <string name="nullval">-</string>
    <string name="emptyField">This field can not be empty!</string>
</resources>
